@@ -978,6 +978,13 @@
 									<input type="checkbox" id="DisableEventScriptSystem" name="DisableEventScriptSystem"/>
 								</td>
 							</tr>
+                            <tr>
+                                <td style="width:90px"></td>
+                                <td>
+                                    <input type="checkbox" id="LogEventScriptTrigger" name="LogEventScriptTrigger" />
+                                    <label><span data-i18n="Log 'event script triggers'">Log 'event script triggers'</span></label>
+                                </td>
+                            </tr>
 							</table>
 							<br>
 
